RESOLVED FIXED274392
AX: empty strings shouldn't be cached in isolated tree
https://bugs.webkit.org/show_bug.cgi?id=274392
Summary AX: empty strings shouldn't be cached in isolated tree
Dominic Mazzoni
Reported 2024-05-20 08:43:10 PDT
AXIsolatedObject::setProperty checks to see if a property value is equal to the default to avoid setting it. This logic has a small bug when it comes to strings, because the null string and empty string are not considered equal, but we don't need to store either in the property map. By calling isEmpty() instead of comparing to emptyString(), we can ensure no empty strings are stored in the property map. The impact of this change on memory usage is negligible by itself, but it will help future optimizations by making the overall property map significantly smaller.
Attachments
Patch (1.97 KB, patch)
2024-05-20 08:45 PDT, Dominic Mazzoni
no flags
Patch (4.53 KB, patch)
2024-06-03 11:38 PDT, Dominic Mazzoni
no flags
Patch (4.66 KB, patch)
2024-06-03 11:39 PDT, Dominic Mazzoni
no flags
Radar WebKit Bug Importer
Comment 1 2024-05-20 08:43:19 PDT
Dominic Mazzoni
Comment 2 2024-05-20 08:45:37 PDT
Dominic Mazzoni
Comment 3 2024-06-03 11:38:09 PDT
Dominic Mazzoni
Comment 4 2024-06-03 11:39:52 PDT
EWS
Comment 5 2024-06-03 13:16:14 PDT
Committed 279669@main (056b2fd838ed): <https://commits.webkit.org/279669@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 471578 [details].
Note You need to log in before you can comment on or make changes to this bug.